Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46112

REG Uploading ftp file cause device not open warning

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • 5.5.0
    • 4.8.x, 5.3.2, 5.4.1, 5.5.0 Beta
    • Network
    • OS X 10.9.5, Linux
    • 0c85cdb8c2601981ce313f262f7d6db951bf61ac (qtbase/5.5, 26.5.2015, 5.5)

      Try to upload new file to ftp server with attached example. There's always warning in console:
      QIODevice::read: device not open
      [with patch]:
      QIODevice::read (QTcpSocket, "QFtpDTP Passive state socket"): device not open

      This is regression and "caused" by the change:
      https://codereview.qt-project.org/#/c/67257/

        1. QTBUG-46112.zip
          1 kB
        2. qtbug46112.zip
          1 kB
        3. qtbug46112_stack.txt
          13 kB
        4. qtbug46112_qt4_repro.diff
          0.6 kB
        5. network_patch.txt
          38 kB
        For Gerrit Dashboard: QTBUG-46112
        # Subject Branch Project Status CR V

            peter-har Peter Hartmann
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes