src/corelib/io/qiodevice.cpp
@@ -38,6 +38,7 @@
 #include "qiodevice_p.h"
 #include "qfile.h"
 #include "qstringlist.h"
+#include "qdir.h"
 
 #include <algorithm>
 #include <limits.h>
@@ -80,10 +81,29 @@ void debugBinaryString(const char *data, qint64 maxlen)
 
 #define Q_VOID
 
+static void checkWarnMessage(const QIODevice *device, const char *function, const char *what)
+{
+    QDebug d = qWarning();
+    d.noquote();
+    d.nospace();
+    d << "QIODevice::" << function;
+#ifndef QT_NO_QOBJECT
+    d << " (" << device->metaObject()->className();
+    if (!device->objectName().isEmpty())
+        d << ", \"" << device->objectName() << '"';
+    if (const QFile *f = qobject_cast<const QFile *>(device))
+        d << ", \"" << QDir::toNativeSeparators(f->fileName()) << '"';
+    d << ')';
+#else
+    Q_UNUSED(device)
+#endif // !QT_NO_QOBJECT
+    d << ": " << what;
+}
+
 #define CHECK_MAXLEN(function, returnType) \
     do { \
         if (maxSize < 0) { \
-            qWarning("QIODevice::"#function": Called with maxSize < 0"); \
+            checkWarnMessage(this, #function, "Called with maxSize < 0"); \
             return returnType; \
         } \
     } while (0)
@@ -92,10 +112,10 @@ void debugBinaryString(const char *data, qint64 maxlen)
    do { \
        if ((d->openMode & WriteOnly) == 0) { \
            if (d->openMode == NotOpen) { \
-               qWarning("QIODevice::"#function": device not open"); \
+               checkWarnMessage(this, #function, "device not open"); \
                return returnType; \
            } \
-           qWarning("QIODevice::"#function": ReadOnly device"); \
+           checkWarnMessage(this, #function, "ReadOnly device"); \
            return returnType; \
        } \
    } while (0)
@@ -104,10 +124,10 @@ void debugBinaryString(const char *data, qint64 maxlen)
    do { \
        if ((d->openMode & ReadOnly) == 0) { \
            if (d->openMode == NotOpen) { \
-               qWarning("QIODevice::"#function": device not open"); \
+               checkWarnMessage(this, #function, "device not open"); \
                return returnType; \
            } \
-           qWarning("QIODevice::"#function": WriteOnly device"); \
+           checkWarnMessage(this, #function, "WriteOnly device"); \
            return returnType; \
        } \
    } while (0)
@@ -462,7 +482,7 @@ void QIODevice::setTextModeEnabled(bool enabled)
 {
     Q_D(QIODevice);
     if (!isOpen()) {
-        qWarning("QIODevice::setTextModeEnabled: The device is not open");
+        checkWarnMessage(this, "setTextModeEnabled", "The device is not open");
         return;
     }
     if (enabled)
@@ -621,11 +641,11 @@ bool QIODevice::seek(qint64 pos)
 {
     Q_D(QIODevice);
     if (d->isSequential()) {
-        qWarning("QIODevice::seek: Cannot call seek on a sequential device");
+        checkWarnMessage(this, "seek", "Cannot call seek on a sequential device");
         return false;
     }
     if (d->openMode == NotOpen) {
-        qWarning("QIODevice::seek: The device is not open");
+        checkWarnMessage(this, "seek", "The device is not open");
         return false;
     }
     if (pos < 0) {
@@ -923,7 +943,7 @@ QByteArray QIODevice::read(qint64 maxSize)
 #endif
 
     if (maxSize != qint64(int(maxSize))) {
-        qWarning("QIODevice::read: maxSize argument exceeds QByteArray size limit");
+        checkWarnMessage(this, "read", "maxSize argument exceeds QByteArray size limit");
         maxSize = INT_MAX;
     }
 
@@ -1055,7 +1075,7 @@ qint64 QIODevice::readLine(char *data, qint64 maxSize)
 {
     Q_D(QIODevice);
     if (maxSize < 2) {
-        qWarning("QIODevice::readLine: Called with maxSize < 2");
+        checkWarnMessage(this, "readLine", "Called with maxSize < 2");
         return qint64(-1);
     }
 
